# 2022-PruebasRendimientoDocker

./: .gitignore  README.md  docker-compose.apache.yml  docker-compose.development.yml  docker-compose.json  docker-compose.yml  prometheus.apache.yml  prometheus.yml  run-artillery
app-php-apache/: .gitignore  README.md  composer.json  docker-compose.yml  dockerfile
app-php-apache/config/: modules.config.php
app-php-apache/config/autoload/: global.php
app-php-apache/docs/: create-laminas-skeleton.md  create-zf-skeleton-with-docker.md
app-php-apache/scripts/: create-table.sql  data.csv  load-data.sql
artillery/: apache-test-1.yml  apache-test-2.yml  apache-test-3.yml  test-prometheus.yml
artillery/payloads/: data.csv
artillery/processors/: custom-functions.js
artillery/scripts/: apache-test-1.yml  apache-test-2.yml  apache-test-3.yml
dataset-manager/: .gitignore  Cargo.toml  README.md
dataset-manager/src/: main.rs
docs/: cadvisor_cpu_metrics.md  create_docker_container_resource_consumption_dashboard.md  dashboard_ui_vs_dashboard_as_code.md  exploring_cadvisor_and_apache_exporter_metrics.md  grafonnet.md  how_to_provision_dashboards.md  metrics_for_apache_applications_running_in_docker.md  pull_docker_metrics_into_prometheus.md  push_artillery_metrics_into_prometheus.md  testing-with-artillery.md
examples/docker-daemon/: README.md  docker-compose.yml  prometheus.yml
examples/steps/step-1/: docker-compose.yml
examples/steps/step-2/: docker-compose.yml  (+1 more)
grafana/: Dockerfile
grafana/dashboards/: jsonnetfile.lock.json
scripts/: get-wsl-ip
(+19 files in other folders)
