[package]
name = "dataset-manager"
version = "0.1.0"
authors = ["Mario Rojas"]
about = "A tool to manage datasets"
edition = "2021"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
glob = { version = "0.3.1" }
rand = { version = "0.8.5" }
csv = { version = "1.2.1" }
serde = { version = "1.0.163", features = ["derive"] }
